fix sidemenu expand collapse buttons

--- a/app/components/SideMenu.css
+++ b/app/components/SideMenu.css
@@ -15,10 +15,23 @@
   cursor: pointer;
   border: 3px solid #575A5C;
   transition: transform 0.5s ease-in-out;
+  background-size: cover;
 }
 
-.menuToggle :hover {
+.menuToggle:hover {
   background-color: #F09E6A;
+}
+.menuToggle.closeMenu {
+  background-image: url('../images/sideMenuToggleClose.svg');
+}
+.menuToggle.closeMenu:hover {
+  background-image: url('../images/sideMenuToggleCloseHover.svg');
+}
+.menuToggle.openMenu {
+  background-image: url('../images/sideMenuToggleOpen.svg');
+}
+.menuToggle.openMenu:hover {
+  background-image: url('../images/sideMenuToggleOpenHover.svg');
 }
 
 .menuToggle.rotated {
@@ -140,3 +153,4 @@
 .menuItem:hover .menuBox.stackedBar img {
   display: none !important;
 }
+
